translate asset-related strings

--- a/app/views/tenon/assets/_form.html.haml
+++ b/app/views/tenon/assets/_form.html.haml
@@ -4,12 +4,12 @@
     = error_messages_for :asset
     .fields.full
       .form-group.full
-        = f.text_field :title, placeholder: '--', explanation: "Enter a title for your asset.  You can leave this blank to just use the file name as the title. #{defined?(multiple) ? 'If you upload multiple assets a numerical series will be created.' : '' }"
+        = f.text_field :title, placeholder: '--', explanation: "#{t('tenon.asset.enter_a_title_for_your_asset')} #{defined?(multiple) ? t('tenon.asset.multiple_assets') : '' }"
 
       .form-group
         .browse-button-holder
           .fileupload.btn.btn-comp.browse
-            %span#choose-files= defined?(multiple) ? 'Choose Files' : 'Choose File'
+            %span#choose-files= defined?(multiple) ? t('tenon.asset.choose_file') : t('tenon.asset.choose_files')
             %input{ :type => 'file', :class => 'upload', multiple: defined?(multiple) && multiple, style: 'width: 100%;', name: 'asset[attachment]' }
 
     .spacer
