bem: actions and buttons

--- a/app/assets/stylesheets/tenon/account.scss
+++ b/app/assets/stylesheets/tenon/account.scss
@@ -3,7 +3,7 @@
   top: 0;
   right: $default-spacing;
   z-index: $z-account;
-  .action--icon {
+  .action-icon {
     line-height: $util-nav-height;
     i {
       margin: $default-spacing/3 0;
