--- a/app/assets/stylesheets/tenon/tenon.scss
+++ b/app/assets/stylesheets/tenon/tenon.scss
@@ -45,7 +45,7 @@
 
 // Buttons
 @import './variables/btn';
-@import 'client//variables/btn'; // client over-rides
+@import 'client/variables/btn'; // client over-rides
 @import './btn';
 @import './fab';
 
