--- a/app/assets/stylesheets/tenon/actions.scss
+++ b/app/assets/stylesheets/tenon/actions.scss
@@ -1,7 +1,13 @@
-.action--icon {
+.actions {
+  position: absolute;
+  top: 0;
+  right: 0;
+}
+
+.action-icon {
   display: inline-block;
   position: relative;
-  line-height: $default-spacing*1.5;
+  line-height: 44px;
   color: $primary-fg-color;
 
   &:hover {
@@ -9,26 +15,33 @@
   }
 
   i {
+    @extend %default-transition;
+    @include font($h3-size, $h3-line-height);
     display: block;
     position: relative;
     border-radius: 50%;
-    width: $default-spacing*1.5;
-    height: $default-spacing*1.5;
+    width: 44px;
+    height: 44px;
     overflow: hidden;
     text-align: center;
     line-height: $default-spacing*1.5;
-    @extend %default-transition;
-    @include font($h3-size, $h3-line-height);
   }
 }
 
-.action--text {
+.action-icon--white {
+  color: rgba($white, .8);
+  &:hover {
+    color: rgba($white,1);
+  }
+}
+
+.action-text {
+  @extend %font-smaller;
   position: relative;
   height: $default-spacing*1.5;
   text-transform: uppercase;
   line-height: $default-spacing*1.5;
   color: $link-color;
-  @extend %font-smaller;
 
   &:hover {
     text-decoration: none;
@@ -36,12 +49,14 @@
   }
 }
 
-.action-btn {
-  margin-right: $default-spacing/3;
+.action {
+  float: left;
 }
 
-.actions {
-  position: absolute;
-  top: 0;
-  right: 0;
+.action__btn {
+  margin: 8px 10px 0 0;
+}
+
+.action__icon {
+  margin: 8px 0 0;
 }
