--- a/app/assets/stylesheets/tenon/btn.scss
+++ b/app/assets/stylesheets/tenon/btn.scss
@@ -1,78 +1,47 @@
 .btn {
+  @extend %z-depth-1;
   @extend %default-transition;
-  @extend %z-depth-2;
   @extend %font-smaller;
-  line-height: $btn-height;
-  position: relative;
   display: inline-block;
-  height: $btn-height;
-  padding: 0 $default-spacing;
-  text-align: center;
-  text-transform: uppercase;
-  color: $btn-primary-fg-color;
+  position: relative;
   border: 0;
   border-radius: $default-border-radius;
-  background-color: $btn-primary-bg-color;
-  &:hover {
-    @extend %z-depth-1;
-    text-decoration: none;
-    color: white;
-  }
-}
-
-.btn-reverse {
-  @extend .btn;
-  color: $btn-primary-bg-color;
-  background-color: $btn-primary-fg-color;
-  &:hover {
-    color: $btn-primary-bg-color;
-  }
-}
-
-.btn-secondary {
-  @extend .btn;
+  padding: 0 $default-spacing;
+  height: $btn-height;
+  text-align: center;
+  text-transform: uppercase;
+  line-height: $btn-height;
   color: $btn-secondary-fg-color;
-  background-color: $btn-secondary-bg-color;
-}
 
-.btn-secondary-reverse {
-  @extend .btn;
-  color: $btn-secondary-bg-color;
-  background-color: $btn-secondary-fg-color;
   &:hover {
-    color: $btn-secondary-bg-color;
+    @extend %z-depth-2;
+    color: $btn-primary-fg-color;
   }
 }
 
-.btn-block {
-  display: block;
-  width: 100%;
-  margin-bottom: $default-spacing / 3;
-}
-
-.btn-flat,
-.btn-flat:hover {
-  @extend .btn;
+// flat
+.btn--flat {
   @extend %z-depth-0;
+  &:hover {
+    @extend %z-depth-0;
+  }
 }
 
-.btn-flat-reverse,
-.btn-flat-reverse:hover {
-  @extend .btn-flat;
-  color: $btn-primary-bg-color;
-  background-color: $btn-primary-fg-color;
+// colors
+.btn--primary {
+  background-color: $btn-primary-bg-color;
 }
 
-.btn-flat-secondary,
-.btn-flat-secondary:hover {
-  @extend .btn-flat;
-  color: $btn-secondary-fg-color;
+.btn--secondary {
   background-color: $btn-secondary-bg-color;
 }
 
-.btn-flat-secondary-reverse,
-.btn-flat-secondary-reverse:hover {
-  @extend .btn-flat;
-  color: $btn-secondary-bg-color;
-  background-color: $btn-secondary-fg-color;
+.btn--white {
+  color: $white;
+  color: $btn-primary-bg-color;
+}
+
+// full width
+.btn--block {
+  display: block;
 }
