--- a/app/views/tenon/settings/show.html.haml
+++ b/app/views/tenon/settings/show.html.haml
@@ -3,7 +3,7 @@
     = render 'tenon/shared/breadcrumbs'
     .actions
       - if can?(:publish, @post)
-        %button.action-btn.btn.btn-flat.submit{ data: { disable_with: 'Please wait...' } } Save
+        %button.action__btn.btn-flat.btn--primary.submit{ data: { disable_with: 'Please wait...' } } Save
 
   %main
     = render partial: 'general'
