--- a/spec/dummy/app/views/tenon/posts/_form.html.haml
+++ b/spec/dummy/app/views/tenon/posts/_form.html.haml
@@ -3,10 +3,12 @@
     = render 'tenon/shared/breadcrumbs'
     .actions
       - if can?(:publish, @post)
-        %button.action-btn.btn.btn-flat.submit{ data: { disable_with: "Please wait..." } } Save
+        .action.action__btn
+          %button.btn.btn--flat.btn--primary.btn--block.submit{ data: { disable_with: "Please wait..." } } Save
 
-      %a.action-icon.dropdown-button{ href: '#!', data: { activates: 'form-dropdown'} }
-        = i('more_vert')
+      .action.action__icon
+        %a.action-icon.action-icon--white.dropdown-button{ href: '#!', data: { activates: 'form-dropdown'} }
+          = i('more_vert')
 
       %ul.dropdown-content#form-dropdown
         - if can?(:create, Tenon::ItemVersion)
@@ -23,12 +25,12 @@
     = f.text_field :title, required: true, class: 'form-title-field'
 
     .form-label Content
-    .panel.block
+    .panel.panel--block
       = f.rich_text :excerpt, label: ''
       = f.tenon_content :content
 
     .form-label Publication Details
-    .panel.block
+    .panel.panel--block
       - unless @categories.blank?
         = f.select :post_category_ids, @categories.map { |c| [c.title, c.id] }, { label: 'Categories' }, { multiple: true }
       .row
