--- a/app/views/tenon/index/index.html.haml
+++ b/app/views/tenon/index/index.html.haml
@@ -1,5 +1,6 @@
 - content_for :util_nav_content do
   / `content_for :util_nav_content do`
 
-%main
-  / %h1 Index#Index
+.drawer-pusher
+  %main
+    / %h1 Index#Index
