--- a/spec/dummy/app/views/tenon/posts/index.html.haml
+++ b/spec/dummy/app/views/tenon/posts/index.html.haml
@@ -3,4 +3,4 @@
     breadcrumbs: breadcrumb_links,
     recordsPath: posts_path(format: 'json'),
     newPath: new_post_path,
-    childComponentNames: { FilterPane: 'PostsFilterPane' }
+    childComponentNames: { FilterDrawer: 'PostsFilterDrawer' }
