--- a/spec/dummy/app/views/tenon/events/_form.html.haml
+++ b/spec/dummy/app/views/tenon/events/_form.html.haml
@@ -1,35 +1,36 @@
-= autosaving_form_for @event do |f|
-  .toolbar.bg-color-primary-dk10
-    = render 'tenon/shared/breadcrumbs'
-    .actions
-      - if can?(:publish, @event)
-        %button.action-btn.btn.btn-flat.submit{ data: { disable_with: "Please wait..." } } Save
+.drawer-pusher
+  = autosaving_form_for @event do |f|
+    .toolbar.bg-color-primary-dk10
+      = render 'tenon/shared/breadcrumbs'
+      .actions
+        - if can?(:publish, @event)
+          %button.action-btn.btn.btn-flat.submit{ data: { disable_with: "Please wait..." } } Save
 
-      %a.action-icon.dropdown-button{ href: '#!', data: { activates: 'form-dropdown'} }
-        = i('more_vert')
+        %a.action-icon.dropdown-button{ href: '#!', data: { activates: 'form-dropdown'} }
+          = i('more_vert')
 
-      %ul.dropdown-content#form-dropdown
-        - if can?(:create, Tenon::ItemVersion)
-          = render 'tenon/shared/draft_controls', obj: @event
+        %ul.dropdown-content#form-dropdown
+          - if can?(:create, Tenon::ItemVersion)
+            = render 'tenon/shared/draft_controls', obj: @event
 
-        - if @event.persisted?
-          %li
-            = link_to @event, data: { method: :delete, confirm: 'Are you sure you want to delete this?' }, class: 'delete-link' do
-              = i('delete')
+          - if @event.persisted?
+            %li
+              = link_to @event, data: { method: :delete, confirm: 'Are you sure you want to delete this?' }, class: 'delete-link' do
+                = i('delete')
 
-  %main
-    = error_messages_for :event
+    %main
+      = error_messages_for :event
 
-    = f.text_field :title, required: true, class: 'form-title-field'
+      = f.text_field :title, required: true, class: 'form-title-field'
 
-    .form-label Content
-    .panel.block
-      = f.tenon_content :description
+      .form-label Content
+      .panel.block
+        = f.tenon_content :description
 
-    .form-label Event Details
-    .panel.block
-      = f.text_field :location
-      = f.date_time_picker :starts_at
-      = f.date_time_picker :ends_at
+      .form-label Event Details
+      .panel.block
+        = f.text_field :location
+        = f.date_time_picker :starts_at
+        = f.date_time_picker :ends_at
 
-      = f.date_time_picker :publish_at, label: "Publish Date"
+        = f.date_time_picker :publish_at, label: "Publish Date"
