--- a/spec/dummy/app/views/tenon/galleries/_form.html.haml
+++ b/spec/dummy/app/views/tenon/galleries/_form.html.haml
@@ -1,31 +1,32 @@
-= autosaving_form_for @gallery do |f|
-  .toolbar.bg-color-primary-dk10
-    = render 'tenon/shared/breadcrumbs'
-    .actions
-      - if can?(:publish, @gallery)
-        %button.action-btn.btn.btn-flat.submit{ data: { disable_with: "Please wait..." } } Save
+.drawer-pusher
+  = autosaving_form_for @gallery do |f|
+    .toolbar.bg-color-primary-dk10
+      = render 'tenon/shared/breadcrumbs'
+      .actions
+        - if can?(:publish, @gallery)
+          %button.action-btn.btn.btn-flat.submit{ data: { disable_with: "Please wait..." } } Save
 
-      %a.action-icon.dropdown-button{ href: '#!', data: { activates: 'form-dropdown'} }
-        = i('more_vert')
+        %a.action-icon.dropdown-button{ href: '#!', data: { activates: 'form-dropdown'} }
+          = i('more_vert')
 
-      %ul.dropdown-content#form-dropdown
-        - if can?(:create, Tenon::ItemVersion)
-          = render 'tenon/shared/draft_controls', obj: @gallery
+        %ul.dropdown-content#form-dropdown
+          - if can?(:create, Tenon::ItemVersion)
+            = render 'tenon/shared/draft_controls', obj: @gallery
 
-        - if @gallery.persisted?
-          %li
-            = link_to @gallery, data: { method: :delete, confirm: 'Are you sure you want to delete this?' }, class: 'delete-link' do
-              = i('delete')
+          - if @gallery.persisted?
+            %li
+              = link_to @gallery, data: { method: :delete, confirm: 'Are you sure you want to delete this?' }, class: 'delete-link' do
+                = i('delete')
 
-  %main
-    = error_messages_for :gallery
+    %main
+      = error_messages_for :gallery
 
-    = f.text_field :title, required: true, class: 'form-title-field'
+      = f.text_field :title, required: true, class: 'form-title-field'
 
-    .form-label Photos
-    .panel.block
-      = link_to_add_association "Add another photo", f, :photos, 'data-association-insertion-node' => '#photo-list', 'data-association-insertion-method' => 'append'
-      = link_to 'Add several', new_item_asset_path(multiple: true), class: 'btn btn-comp browse', data: {'modal-remote' => true, 'modal-title' => "Select file", 'modal-handler' => 'Tenon.features.MultipleAssetAttachment', target: '.tn-tc-asset-fields' }
+      .form-label Photos
+      .panel.block
+        = link_to_add_association "Add another photo", f, :photos, 'data-association-insertion-node' => '#photo-list', 'data-association-insertion-method' => 'append'
+        = link_to 'Add several', new_item_asset_path(multiple: true), class: 'btn btn-comp browse', data: {'modal-remote' => true, 'modal-title' => "Select file", 'modal-handler' => 'Tenon.features.MultipleAssetAttachment', target: '.tn-tc-asset-fields' }
 
-      %ul.nested-field-list.sortable#photo-list
-        = f.nested_fields :photo
+        %ul.nested-field-list.sortable#photo-list
+          = f.nested_fields :photo
