--- a/spec/dummy/app/views/tenon/posts/_form.html.haml
+++ b/spec/dummy/app/views/tenon/posts/_form.html.haml
@@ -1,42 +1,43 @@
-= autosaving_form_for @post do |f|
-  .toolbar.bg-color-primary-dk10
-    = render 'tenon/shared/breadcrumbs'
-    .actions
-      - if can?(:publish, @post)
-        %button.action-btn.btn.btn-flat.submit{ data: { disable_with: "Please wait..." } } Save
+.drawer-pusher
+  = autosaving_form_for @post do |f|
+    .toolbar.bg-color-primary-dk10
+      = render 'tenon/shared/breadcrumbs'
+      .actions
+        - if can?(:publish, @post)
+          %button.action-btn.btn.btn-flat.submit{ data: { disable_with: "Please wait..." } } Save
 
-      %a.action-icon.dropdown-button{ href: '#!', data: { activates: 'form-dropdown'} }
-        = i('more_vert')
+        %a.action-icon.dropdown-button{ href: '#!', data: { activates: 'form-dropdown'} }
+          = i('more_vert')
 
-      %ul.dropdown-content#form-dropdown
-        - if can?(:create, Tenon::ItemVersion)
-          = render 'tenon/shared/draft_controls', obj: @post
+        %ul.dropdown-content#form-dropdown
+          - if can?(:create, Tenon::ItemVersion)
+            = render 'tenon/shared/draft_controls', obj: @post
 
-        - if @post.persisted?
-          %li
-            = link_to @post, data: { method: :delete, confirm: 'Are you sure you want to delete this?' }, class: 'delete-link' do
-              = i('delete')
+          - if @post.persisted?
+            %li
+              = link_to @post, data: { method: :delete, confirm: 'Are you sure you want to delete this?' }, class: 'delete-link' do
+                = i('delete')
 
-  %main
-    = error_messages_for :post
+    %main
+      = error_messages_for :post
 
-    = f.text_field :title, required: true, class: 'form-title-field'
+      = f.text_field :title, required: true, class: 'form-title-field'
 
-    .form-label Content
-    .panel.block
-      = f.rich_text :excerpt, label: ''
-      = f.tenon_content :content
+      .form-label Content
+      .panel.block
+        = f.rich_text :excerpt, label: ''
+        = f.tenon_content :content
 
-    .form-label Publication Details
-    .panel.block
-      - unless @categories.blank?
-        = f.select :post_category_ids, @categories.map { |c| [c.title, c.id] }, { label: 'Categories' }, { multiple: true }
-      .row
-        .inner6
-          = f.collection_select :user_id, @users, :id, :email, include_blank: "(No Author)", label: 'Author'
-        .inner6.omega
-          = f.date_time_picker :publish_at, label: 'Publish Date / Time'
+      .form-label Publication Details
+      .panel.block
+        - unless @categories.blank?
+          = f.select :post_category_ids, @categories.map { |c| [c.title, c.id] }, { label: 'Categories' }, { multiple: true }
+        .row
+          .inner6
+            = f.collection_select :user_id, @users, :id, :email, include_blank: "(No Author)", label: 'Author'
+          .inner6.omega
+            = f.date_time_picker :publish_at, label: 'Publish Date / Time'
 
-    = render 'tenon/shared/seo_fields', f: f
+      = render 'tenon/shared/seo_fields', f: f
 
-    .spacer
+      .spacer
