--- a/app/assets/stylesheets/tenon/util-nav.scss
+++ b/app/assets/stylesheets/tenon/util-nav.scss
@@ -2,7 +2,7 @@
   position: fixed;
   top: 0;
   right: $default-spacing;
-  z-index: $z-account;
+  z-index: $z-layout-util-nav;
   padding: 8px 0;
 }
 
