--- a/app/views/layouts/tenon/application.html.haml
+++ b/app/views/layouts/tenon/application.html.haml
@@ -19,6 +19,7 @@
     = flash_messages
     = render 'tenon/shared/version_warning' if @item_version
 
+    = render 'tenon/shared/burger'
     #main-nav.drawer
       %p.app-info
         = link_to '/tenon' do
