--- a/app/assets/stylesheets/tenon/app-info.scss
+++ b/app/assets/stylesheets/tenon/app-info.scss
@@ -1,6 +1,6 @@
 .app-info {
   a {
-    @extend %default-transition;
+    @include default-transition;
     @extend %truncate;
     @extend %font-body;
     line-height: $toolbar-height;
