--- a/app/assets/stylesheets/tenon/record.scss
+++ b/app/assets/stylesheets/tenon/record.scss
@@ -3,7 +3,7 @@
 
 .record {
   @extend %z-depth-2;
-  @extend %default-transition;
+  @include default-transition;
   position: relative;
   opacity: .7;
   margin-bottom: 1px;
@@ -46,7 +46,7 @@
     padding-left: $default-spacing/2;
     text-align: right;
   }
-  @extend %default-transition;
+  @include default-transition;
 }
 
 .record:hover .record__actions {
