--- a/app/assets/stylesheets/tenon/toolbar.scss
+++ b/app/assets/stylesheets/tenon/toolbar.scss
@@ -4,18 +4,21 @@
   left: 0;
   z-index: $z-layout-toolbar;
   background-color: $toolbar-bg-color;
-  padding: 0 $default-spacing*4.5 0 $main-nav-width;
+  padding: 0 $default-spacing*5 0 $main-nav-width;
   width: 100%;
   height: $util-nav-height;
   overflow: visible;
 }
 
 .toolbar__actions {
+  padding: 8px 10px;
+  height: $util-nav-height;
+}
+
+.toolbar__actions--right {
   position: fixed;
   top: 0;
   right: $default-spacing*4.5;
-  padding: 8px 10px;
-  height: $util-nav-height;
 }
 
 .toolbar__action {
@@ -29,6 +32,9 @@
   }
 }
 
+.toolbar__search-clear {
+}
+
 .toolbar--posts {
   // @sean: just an example. see note here =>
   // app/assets/javascripts/tenon/components/resource-index/components/default/header.es6
@@ -40,23 +46,48 @@
 
 
 .toolbar-overlay {
-  @extend %default-transition;
-  position: fixed;
-  top: 0;
-  right: 0;
-  left: 0;
+  @include default-transition;
   opacity: 0;
-  background-color: $quick-search-overlay-bg-color;
-  padding: 0 $default-spacing;
   height: 0;
   overflow: hidden;
   line-height: $util-nav-height;
   content: 0;
 }
 
+.toolbar-overlay__background {
+  @include default-transition;
+  position: fixed;
+  top: 0;
+  right: 0;
+  left: 0;
+  opacity: .5;
+  background-color: $quick-search-overlay-bg-color;
+  height: 0;
+}
+
+.toolbar-overlay__content {
+  position: absolute;
+  top: 0;
+  right: 0;
+  left: $default-spacing;
+}
+
+.toolbar-overlay__action {
+  position: fixed;
+  top: 0;
+  left: 0;
+  float: left;
+  padding: 8px 10px 8px $default-spacing;
+  width: $main-nav-width;
+  height: $util-nav-height;
+}
+
 .toolbar-overlay--is-open {
   opacity: 1;
   height: $util-nav-height;
+  .toolbar-overlay__background {
+    height: $util-nav-height;
+  }
 }
 
 .toolbar-overlay__toolbar {
@@ -68,6 +99,9 @@
     }
   }
 }
+
+@include toolbar-z-index-generator;
+
 
 // .toolbar-action {
 //   display: block;
