Reorganize the ResourceIndex app

--- a/spec/dummy/app/views/tenon/posts/index.html.haml
+++ b/spec/dummy/app/views/tenon/posts/index.html.haml
@@ -3,4 +3,6 @@
     breadcrumbs: breadcrumb_links,
     recordsPath: posts_path(format: 'json'),
     newPath: new_post_path,
-    childComponentNames: { FilterDrawer: 'PostsFilterDrawer' }
+    childComponentNames: {  FilterDrawer: 'PostsFilterDrawer',
+                            RecordTitle: 'PostsRecordTitle' }
+
