--- a/app/assets/stylesheets/tenon/search.scss
+++ b/app/assets/stylesheets/tenon/search.scss
@@ -1,10 +1,10 @@
-.search-container {
-  display: block;
-  position: relative;
-  float: left;
-  // padding: 10px 0 0 $default-spacing;
-  width: calc(100% - #{$default-spacing*6});
-}
+// .search-container {
+//   display: block;
+//   position: relative;
+//   float: left;
+//   // padding: 10px 0 0 $default-spacing;
+//   width: calc(100% - #{$default-spacing*6});
+// }
 
 .search-content {
   position: relative;
