--- a/spec/dummy/app/views/tenon/posts/index.html.haml
+++ b/spec/dummy/app/views/tenon/posts/index.html.haml
@@ -4,5 +4,6 @@
     recordsPath: posts_path(format: 'json'),
     newPath: new_post_path,
     childComponentNames: {  FilterDrawer: 'PostsFilterDrawer',
-                            RecordTitle: 'PostsRecordTitle' }
+                            RecordTitle: 'PostsRecordTitle',
+                            RecordActions: 'PostsRecordActions' }
 
