--- a/app/assets/stylesheets/tenon/util-nav.scss
+++ b/app/assets/stylesheets/tenon/util-nav.scss
@@ -14,6 +14,7 @@
   background-color: $avatar-bg-color;
   width: 44px;
   height: 44px;
+  text-align: center;
   line-height: 44px;
   color: $avatar-fg-color;
   &:hover {
